@@ -52,6 +52,8 @@ import java.text.DecimalFormat;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.audiobea.crm.app.utils.ConstantsLog.*;
+
 @Slf4j
 @AllArgsConstructor
 @Service
@@ -75,10 +77,9 @@ public class UploadServiceImpl implements IUploadService {
     private ProductMapper productMapper;
 
     @Override
-    public Resource load(String filename) throws MalformedURLException {
-        Path pathImage = getPath(filename);
-        Resource resource;
-        resource = new UrlResource(pathImage.toUri());
+    public Resource load(final String filename) throws MalformedURLException {
+        final Path pathImage = getPath(filename);
+        final Resource resource = new UrlResource(pathImage.toUri());
         if (!resource.exists() || !resource.isReadable()) {
             throw new UploadFileException(
                     Utils.getLocalMessage(messageSource, I18Constants.UPLOAD_FILE_EXCEPTION.getKey(), filename));
@@ -87,24 +88,25 @@ public class UploadServiceImpl implements IUploadService {
     }
 
     @Override
-    public String copy(MultipartFile file) throws IOException {
-        String uniqueFileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
-        log.debug("uniqueFileName: {}", uniqueFileName);
-        Path rootPath = getPath(uniqueFileName);
-        log.debug("rootPath: {}", rootPath.getFileName());
+    public String copy(final MultipartFile file) throws IOException {
+        final String uniqueFileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+        log.debug(LOG_FILE_NAME, uniqueFileName);
+        final Path rootPath = getPath(uniqueFileName);
+        log.debug(LOG_ROOT_PATH, rootPath.getFileName());
         Files.copy(file.getInputStream(), rootPath);
         return uniqueFileName;
     }
 
     @Override
-    public void delete(String filename) throws NoSuchFileException {
-        Path rootPath = getPath(filename);
-        File file = rootPath.toFile();
+    public void delete(final String filename) throws NoSuchFileException {
+        final Path rootPath = getPath(filename);
+        final File file = rootPath.toFile();
         if (file.exists() && file.canRead()) {
             try {
                 Files.delete(rootPath);
             } catch (IOException e) {
-                throw new NoSuchFileException(Utils.getLocalMessage(messageSource, I18Constants.NO_FILE_FOUND.getKey(), filename));
+                throw new NoSuchFileException(
+                        Utils.getLocalMessage(messageSource, I18Constants.NO_FILE_FOUND.getKey(), filename));
             }
         }
     }
@@ -120,7 +122,7 @@ public class UploadServiceImpl implements IUploadService {
     }
 
     @Override
-    public DtoInFileResponse uploadExcelFile(MultipartFile file) {
+    public DtoInFileResponse uploadExcelFile(final MultipartFile file) {
         long timeStart = new Date().getTime();
         Utils.hasExcelFormat(file, messageSource);
         statesCount = 0;
@@ -128,13 +130,13 @@ public class UploadServiceImpl implements IUploadService {
         coloniesCount = 0;
 
         try {
-            List<State> listStates = setupListStates(excelToListStates(file.getInputStream()));
+            final List<State> listStates = setupListStates(excelToListStates(file.getInputStream()));
             long timeUpload = new Date().getTime();
-            String strTimeUpload = getFinishTimeStr(timeStart, timeUpload);
-            log.debug("States loaded: {}", statesCount);
-            log.debug("Cities loaded: {}", citiesCount);
-            log.debug("Colonies loaded: {}", coloniesCount);
-            log.debug("Upload time: {}", strTimeUpload);
+            final String strTimeUpload = getFinishTimeStr(timeStart, timeUpload);
+            log.debug(LOG_STATES_LOADED, statesCount);
+            log.debug(LOG_CITIES_LOADED, citiesCount);
+            log.debug(LOG_COLONIES_LOADED, coloniesCount);
+            log.debug(LOG_UPLOAD_TIME, strTimeUpload);
             saveColoniesAsync(listStates, coloniesCount);
             return new DtoInFileResponse(df.format(statesCount), df.format(citiesCount), df.format(coloniesCount));
         } catch (IOException e) {
@@ -143,233 +145,11 @@ public class UploadServiceImpl implements IUploadService {
         return null;
     }
 
-    @Override
-    public ResponseData<DtoInProduct> uploadProducts(MultipartFile file) {
-        long timeStart = new Date().getTime();
-        Utils.hasExcelFormat(file, messageSource);
-        try {
-            List<DtoInProduct> listProducts = excelToListProducts(file.getInputStream());
-            long timeUpload = new Date().getTime();
-            String strTimeUpload = getFinishTimeStr(timeStart, timeUpload);
-            if (listProducts != null && !listProducts.isEmpty()){
-                log.debug("Products loaded: {}", listProducts.size());
-            }
-            log.debug("Upload time: {}", strTimeUpload);
-            return new ResponseData<>(listProducts, null, null, null, null);
-        } catch (IOException e) {
-            log.error(e.getMessage());
-        }
-        return null;
-    }
-
-    private List<DtoInProduct> excelToListProducts(InputStream inputStream) {
-        try (Workbook workbook = new XSSFWorkbook(inputStream)) {
-            Sheet sheet = workbook.getSheet(Constants.SHEET);
-            Iterator<Row> rows = sheet.iterator();
-            int rowNumber = 0;
-            List<Product> listProducts = new ArrayList<>();
-            while (rows.hasNext()) {
-                Row currentRow = rows.next();
-                if (rowNumber == 0) { // Skip header
-                    rowNumber++;
-                    continue;
-                }
-                Iterator<Cell> cellsInRow = currentRow.iterator();
-                DtoInProductExcelFile file = reedCellsProduct(cellsInRow);
-                Brand brand = getBrandFromFile(file);
-                SubBrand subBrand = getSubBrandFromFile(file);
-                if (subBrand != null && brand != null) {
-                    subBrand.setBrandId(brand.getId());
-                    subBrandDao.save(subBrand);
-                    brand.getSubBrands().add(subBrand);
-                    brandDao.save(brand);
-                }
-
-                ProductType productType = getProductTypeFromFile(file);
-                String brandId = brand == null ? null : brand.getId();
-                String subBrandId = subBrand == null ? null : subBrand.getId();
-                Product product = getProductFromFile(file, brandId, subBrandId, productType);
-                if (subBrand != null && brand != null && product != null) {
-                    subBrand.setBrandId(brand.getId());
-                    subBrand.getProducts().add(product);
-                    subBrandDao.save(subBrand);
-
-                    brand.getSubBrands().add(subBrand);
-                    brand.getProducts().add(product);
-                    brandDao.save(brand);
-                }
-                listProducts.add(product);
-            }
-            return listProducts.isEmpty()? null
-                    : listProducts.stream().map(productMapper::productToDtoInProduct).collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new ParseFileException(Utils.getLocalMessage(messageSource, I18Constants.FAIL_PARSE_EXCEL_FILE.getKey(), Constants.SHEET));
-        }
-    }
-
-    private DtoInProductExcelFile reedCellsProduct(Iterator<Cell> cellsInRow) {
-        DtoInProductExcelFile file = new DtoInProductExcelFile();
-        int cellIdx = 0;
-        while (cellsInRow.hasNext()) {
-            Cell currentCell = cellsInRow.next();
-            switch (cellIdx) {
-                case 0:
-                    log.debug("getBrand");
-                    file.setBrand(Utils.removeAccents(currentCell.getStringCellValue()));
-                    log.debug(file.getBrand());
-                    break;
-                case 1:
-                    log.debug("getSubBrand");
-                    file.setSubBrand(Utils.removeAccents(currentCell.getStringCellValue()));
-                    log.debug(file.getSubBrand());
-                    break;
-                case 2:
-                    log.debug("getDescription");
-                    file.setDescription(Utils.removeAccents(currentCell.getStringCellValue()));
-                    log.debug(file.getDescription());
-                    break;
-                case 3:
-                    log.debug("getDiscount");
-                    file.setDiscount(currentCell.getNumericCellValue());
-                    log.debug(String.valueOf(file.getDiscount()));
-                    break;
-                case 4:
-                    log.debug("getEnabled");
-                    file.setEnabled(currentCell.getNumericCellValue() == 1);
-                    log.debug(String.valueOf(file.getEnabled()));
-                    break;
-                case 5:
-                    log.debug("getProductNew");
-                    file.setProductNew(currentCell.getNumericCellValue() == 1);
-                    log.debug(String.valueOf(file.getProductNew()));
-                    break;
-                case 6:
-                    log.debug("getPrice");
-                    file.setPrice(currentCell.getNumericCellValue());
-                    log.debug(String.valueOf(file.getPrice()));
-                    break;
-                case 7:
-                    log.debug("getProductName");
-                    file.setProductName(Utils.removeAccents(currentCell.getStringCellValue()));
-                    log.debug(file.getProductName());
-                    break;
-                case 8:
-                    log.debug("getStock");
-                    file.setStock((int) currentCell.getNumericCellValue());
-                    log.debug(String.valueOf(file.getStock()));
-                    break;
-                case 9:
-                    log.debug("getTitle");
-                    file.setTitle(Utils.removeAccents(currentCell.getStringCellValue()));
-                    log.debug(file.getTitle());
-                    break;
-                case 10:
-                    log.debug("getType");
-                    file.setType(Utils.removeAccents(currentCell.getStringCellValue()));
-                    log.debug(file.getType());
-                    break;
-                default:
-                    break;
-            }
-            cellIdx++;
-        }
-        return file;
-    }
-
-    private Brand getBrandFromFile(DtoInProductExcelFile file) {
-        if (file.getBrand() == null || file.getBrand().isEmpty()) {
-            return null;
-        }
-        Brand brand = brandDao.findByBrandName(file.getBrand()).orElse(null);
-        if (brand == null) {
-            brand = new Brand();
-            brand.setBrandName(file.getBrand());
-            brand.setSubBrands(new ArrayList<>());
-            brand.setProducts(new ArrayList<>());
-            return brandDao.save(brand);
-        }
-        return brand;
-    }
-
-    private SubBrand getSubBrandFromFile(DtoInProductExcelFile file) {
-        if (file.getSubBrand() == null || file.getSubBrand().isEmpty()) {
-            return null;
-        }
-        SubBrand subBrand = subBrandDao.findBySubBrandName(file.getSubBrand()).orElse(null);
-        if (subBrand == null) {
-            subBrand = new SubBrand();
-            subBrand.setSubBrandName(file.getSubBrand());
-            subBrand.setProducts(new ArrayList<>());
-            return subBrandDao.save(subBrand);
-        }
-        return subBrand;
-    }
-
-    private ProductType getProductTypeFromFile(DtoInProductExcelFile file) {
-        if (file == null || file.getType() == null || file.getType().isEmpty()) {
-            return null;
-        }
-        ProductType productType = productTypeDao.findProductTypeByType(file.getType()).orElse(null);
-        if (productType == null) {
-            productType = new ProductType();
-            productType.setType(file.getType());
-            return productTypeDao.save(productType);
-        }
-        return productType;
-    }
-
-    private Product getProductFromFile(DtoInProductExcelFile file, String brandId, String subBrandId, ProductType productType) {
-        if (file == null || file.getProductName() == null || file.getProductName().isEmpty()) {
-            return null;
-        }
-        Product product = new Product();
-        product.setProductNew(file.getProductNew());
-        product.setPrice(file.getPrice());
-        product.setDiscount(file.getDiscount());
-        product.setTitle(file.getTitle());
-        product.setDescription(file.getDescription());
-        product.setStock(file.getStock());
-        product.setProductType(productType);
-        product.setBrandId(brandId);
-        product.setSubBrandId(subBrandId);
-        return productDao.save(product);
-    }
-
-    private void saveColoniesAsync(List<State> listStates, int totalElements) {
-        new Thread(() -> {
-            long timeStart = new Date().getTime();
-            log.debug("Start load to DBB");
-            log.debug("0.00%");
-            double elements = 0;
-            for (State state : listStates) {
-                // Save state, save city, save colony
-                State st = stateDao.save(state);
-                for (City city : st.getCities()) {
-                    city.setStateId(st.getId());
-                    City ct = cityDao.save(city);
-                    for (Colony colony : ct.getColonies()) {
-                        colony.setCityId(ct.getId());
-                        colony.setStateId(st.getId());
-                    }
-                    city.setColonies(colonyDao.saveAll(ct.getColonies()));
-                }
-                st.setCities(cityDao.saveAll(st.getCities()));
-                stateDao.save(st);
-                elements += state.getCities().stream().mapToInt(city -> city.getColonies().size()).sum();
-                double progress = (elements * 100) / (double) totalElements;
-                log.debug("{}% -> {}, {}/{}", decimalF.format(progress), state.getName(), df.format(elements), df.format(totalElements));
-            }
-            long timeFinish = new Date().getTime();
-            String totalTimeSave = getFinishTimeStr(timeStart, timeFinish);
-            log.debug("Saved time: {}", totalTimeSave);
-        }).start();
-    }
-
-    private List<State> setupListStates(Set<State> setState) {
-        List<State> listState = new ArrayList<>(setState);
+    private List<State> setupListStates(final Set<State> setState) {
+        final List<State> listState = new ArrayList<>(setState);
         Collections.sort(listState);
         for (State state : listState) {
-            List<City> cities = new ArrayList<>(state.getCities());
+            final List<City> cities = new ArrayList<>(state.getCities());
             Collections.sort(cities);
             state.setCities(cities);
             if (state.getCities() != null && !state.getCities().isEmpty()) {
@@ -380,60 +160,111 @@ public class UploadServiceImpl implements IUploadService {
                     coloniesCount = coloniesCount + city.getColonies().size();
                     citiesCount++;
                 }
-                log.debug("{} -> cities: {}, colonies: {}", state.getName(), state.getCities().size(), count);
+                log.debug(LOG_CITIES_COLONIES_COUNT, state.getName(), state.getCities().size(), count);
             }
             statesCount++;
         }
         return listState;
     }
 
-    private void setupCity(City city) {
-        List<Colony> colonies = new ArrayList<>(city.getColonies());
-        Collections.sort(colonies);
-        city.setColonies(colonies);
-    }
-
-    private String getFinishTimeStr(long timeStart, long timeFinish) {
-        if (timeStart >= timeFinish) {
-            return "";
-        }
-        long total = timeFinish - timeStart;
-        int seconds = (int) (total / 1000);
-
-        int minutes = seconds / 60;
-        seconds = seconds - (minutes * 60);
-
-        int milliSeconds = (int) total - (seconds * 1000);
-        return String.valueOf(minutes).concat(":").concat(String.valueOf(seconds).concat(":").concat(String.valueOf(milliSeconds)));
-    }
-
-    public Set<State> excelToListStates(InputStream input) {
+    public Set<State> excelToListStates(final InputStream input) {
         try (Workbook workbook = new XSSFWorkbook(input)) {
-            Sheet sheet = workbook.getSheet(Constants.SHEET);
-            Iterator<Row> rows = sheet.iterator();
+            final Sheet sheet = workbook.getSheet(Constants.SHEET);
+            final Iterator<Row> rows = sheet.iterator();
             int rowNumber = 0;
-            Set<State> listSetStates = new HashSet<>();
+            final Set<State> listSetStates = new HashSet<>();
             while (rows.hasNext()) {
-                Row currentRow = rows.next();
+                final Row currentRow = rows.next();
                 if (rowNumber == 0) { // Skip header
                     rowNumber++;
                     continue;
                 }
-                Iterator<Cell> cellsInRow = currentRow.iterator();
-                DtoInDemographicExcelFile file = reedCells(cellsInRow);
-                String nameState = file.getState();
-                String nameCity = file.getCity();
-                String nameColony = file.getColony();
-                String codePostal = file.getCodePostal();
+                final Iterator<Cell> cellsInRow = currentRow.iterator();
+                final DtoInDemographicExcelFile file = reedCells(cellsInRow);
+                final String nameState = file.getState();
+                final String nameCity = file.getCity();
+                final String nameColony = file.getColony();
+                final String codePostal = file.getCodePostal();
                 setStateFromSetStates(listSetStates, nameState, nameCity, nameColony, codePostal);
             }
             return listSetStates;
         } catch (IOException e) {
-            throw new ParseFileException(Utils.getLocalMessage(messageSource, I18Constants.FAIL_PARSE_EXCEL_FILE.getKey(), Constants.SHEET));
+            throw new ParseFileException(
+                    Utils.getLocalMessage(messageSource, I18Constants.FAIL_PARSE_EXCEL_FILE.getKey(), Constants.SHEET));
         }
     }
 
-    private void setStateFromSetStates(Set<State> listSetStates, String nameState, String nameCity, String nameColony, String codePostal) {
+    private String getFinishTimeStr(final long timeStart, final long timeFinish) {
+        if (timeStart >= timeFinish) {
+            return "";
+        }
+        final long total = timeFinish - timeStart;
+        int seconds = (int) (total / 1000);
+
+        final int minutes = seconds / 60;
+        seconds = seconds - (minutes * 60);
+
+        final int milliSeconds = (int) total - (seconds * 1000);
+        return String.valueOf(minutes).concat(":")
+                .concat(String.valueOf(seconds).concat(":").concat(String.valueOf(milliSeconds)));
+    }
+
+    private void saveColoniesAsync(final List<State> listStates, final int totalElements) {
+        new Thread(() -> {
+            final long timeStart = new Date().getTime();
+            log.debug(LOG_START_LOAD_TO_DB);
+            log.debug(LOG_0_00);
+            double elements = 0;
+            for (State state : listStates) {
+                final State st = stateDao.save(state);
+                for (City city : st.getCities()) {
+                    city.setStateId(st.getId());
+                    final City ct = cityDao.save(city);
+                    for (Colony colony : ct.getColonies()) {
+                        colony.setCityId(ct.getId());
+                        colony.setStateId(st.getId());
+                    }
+                    city.setColonies(colonyDao.saveAll(ct.getColonies()));
+                }
+                st.setCities(cityDao.saveAll(st.getCities()));
+                stateDao.save(st);
+                elements += state.getCities().stream().mapToInt(city -> city.getColonies().size()).sum();
+                final double progress = (elements * 100) / (double) totalElements;
+                log.debug(LOG_FORMAT_PROGRESS, decimalF.format(progress), state.getName(), df.format(elements),
+                        df.format(totalElements));
+            }
+            final long timeFinish = new Date().getTime();
+            final String totalTimeSave = getFinishTimeStr(timeStart, timeFinish);
+            log.debug(LOG_SAVED_TIME, totalTimeSave);
+        }).start();
+    }
+
+    private void setupCity(final City city) {
+        final List<Colony> colonies = new ArrayList<>(city.getColonies());
+        Collections.sort(colonies);
+        city.setColonies(colonies);
+    }
+
+    private DtoInDemographicExcelFile reedCells(final Iterator<Cell> cellsInRow) {
+        final DtoInDemographicExcelFile file = new DtoInDemographicExcelFile();
+        int cellIdx = 0;
+        while (cellsInRow.hasNext()) {
+            final Cell currentCell = cellsInRow.next();
+            switch (cellIdx) {
+                case 1 -> file.setCodePostal(Utils.removeAccents(currentCell.getStringCellValue()));
+                case 2 -> file.setColony(Utils.removeAccents(currentCell.getStringCellValue()));
+                case 3 -> file.setCity(Utils.removeAccents(currentCell.getStringCellValue()));
+                case 4 -> file.setState(Utils.removeAccents(currentCell.getStringCellValue()));
+                default -> {
+                }
+            }
+            cellIdx++;
+        }
+        return file;
+    }
+
+    private void setStateFromSetStates(final Set<State> listSetStates, final String nameState, final String nameCity,
+            final String nameColony, final String codePostal) {
         State state = listSetStates.stream().filter(s -> s.getName().equals(nameState)).findFirst().orElse(null);
 
         if (state == null) {
@@ -442,37 +273,11 @@ public class UploadServiceImpl implements IUploadService {
             state.setCities(new ArrayList<>());
             listSetStates.add(state);
         }
-        City city = setCity(state, nameCity);
+        final City city = setCity(state, nameCity);
         city.getColonies().add(setColony(nameColony, codePostal));
     }
 
-    private DtoInDemographicExcelFile reedCells(Iterator<Cell> cellsInRow) {
-        DtoInDemographicExcelFile file = new DtoInDemographicExcelFile();
-        int cellIdx = 0;
-        while (cellsInRow.hasNext()) {
-            Cell currentCell = cellsInRow.next();
-            switch (cellIdx) {
-                case 1:
-                    file.setCodePostal(Utils.removeAccents(currentCell.getStringCellValue()));
-                    break;
-                case 2:
-                    file.setColony(Utils.removeAccents(currentCell.getStringCellValue()));
-                    break;
-                case 3:
-                    file.setCity(Utils.removeAccents(currentCell.getStringCellValue()));
-                    break;
-                case 4:
-                    file.setState(Utils.removeAccents(currentCell.getStringCellValue()));
-                    break;
-                default:
-                    break;
-            }
-            cellIdx++;
-        }
-        return file;
-    }
-
-    private City setCity(State state, String nameCity) {
+    private City setCity(final State state, final String nameCity) {
         City city = null;
         if (state.getCities() != null && !state.getCities().isEmpty()) {
             city = state.getCities().stream().filter(c -> c.getName().equals(nameCity)).findFirst().orElse(null);
@@ -486,28 +291,226 @@ public class UploadServiceImpl implements IUploadService {
         return city;
     }
 
-    private Colony setColony(String nameColony, String codePostal) {
-        Colony colony = new Colony();
+    private Colony setColony(final String nameColony, final String codePostal) {
+        final Colony colony = new Colony();
         colony.setName(nameColony);
         colony.setPostalCode(codePostal);
         return colony;
     }
 
-    public Path getPath(String filename) {
-        return Paths.get(Constants.UPLOADS_FOLDER).resolve(filename).toAbsolutePath();
-    }
-
     @Override
-    public List<String> uploadFiles(MultipartFile[] files) {
+    public List<String> uploadFiles(final MultipartFile[] files) {
         return Arrays.stream(files).map(file -> {
             try {
-                log.debug("file: {}", file.getName());
+                log.debug(LOG_FILE, file.getName());
                 return copy(file);
             } catch (IOException e) {
                 log.error(e.getMessage());
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
+    }
+
+    @Override
+    public ResponseData<DtoInProduct> uploadProducts(final MultipartFile file) {
+        final long timeStart = new Date().getTime();
+        Utils.hasExcelFormat(file, messageSource);
+        try {
+            final List<DtoInProduct> listProducts = excelToListProducts(file.getInputStream());
+            final long timeUpload = new Date().getTime();
+            final String strTimeUpload = getFinishTimeStr(timeStart, timeUpload);
+            if (listProducts != null && !listProducts.isEmpty()) {
+                log.debug(LOG_PRODUCTS_LOADED, listProducts.size());
+            }
+            log.debug(LOG_UPLOAD_TIME, strTimeUpload);
+            return new ResponseData<>(listProducts, null, null, null, null);
+        } catch (IOException e) {
+            log.error(e.getMessage());
+        }
+        return null;
+    }
+
+    private List<DtoInProduct> excelToListProducts(final InputStream inputStream) {
+        try (Workbook workbook = new XSSFWorkbook(inputStream)) {
+            final Sheet sheet = workbook.getSheet(Constants.SHEET);
+            final Iterator<Row> rows = sheet.iterator();
+            int rowNumber = 0;
+            final List<Product> listProducts = new ArrayList<>();
+            while (rows.hasNext()) {
+                final Row currentRow = rows.next();
+                if (rowNumber == 0) { // Skip header
+                    rowNumber++;
+                    continue;
+                }
+                final Iterator<Cell> cellsInRow = currentRow.iterator();
+                final DtoInProductExcelFile file = reedCellsProduct(cellsInRow);
+                final Brand brand = getBrandFromFile(file);
+                final SubBrand subBrand = getSubBrandFromFile(file);
+                if (subBrand != null && brand != null) {
+                    subBrand.setBrandId(brand.getId());
+                    subBrandDao.save(subBrand);
+                    brand.getSubBrands().add(subBrand);
+                    brandDao.save(brand);
+                }
+
+                final ProductType productType = getProductTypeFromFile(file);
+                final String brandId = brand == null ? null : brand.getId();
+                final String subBrandId = subBrand == null ? null : subBrand.getId();
+                final Product product = getProductFromFile(file, brandId, subBrandId, productType);
+                if (subBrand != null && brand != null && product != null) {
+                    subBrand.setBrandId(brand.getId());
+                    subBrand.getProducts().add(product);
+                    subBrandDao.save(subBrand);
+                    brand.getSubBrands().add(subBrand);
+                    brand.getProducts().add(product);
+                    brandDao.save(brand);
+                }
+                listProducts.add(product);
+            }
+            return listProducts.isEmpty() ? null
+                    : listProducts.stream().map(productMapper::productToDtoInProduct).toList();
+        } catch (IOException e) {
+            throw new ParseFileException(
+                    Utils.getLocalMessage(messageSource, I18Constants.FAIL_PARSE_EXCEL_FILE.getKey(), Constants.SHEET));
+        }
+    }
+
+    private DtoInProductExcelFile reedCellsProduct(final Iterator<Cell> cellsInRow) {
+        final DtoInProductExcelFile file = new DtoInProductExcelFile();
+        int cellIdx = 0;
+        while (cellsInRow.hasNext()) {
+            final Cell currentCell = cellsInRow.next();
+            switch (cellIdx) {
+                case 0 -> {
+                    log.debug(LOG_GET_BRAND);
+                    file.setBrand(Utils.removeAccents(currentCell.getStringCellValue()));
+                    log.debug(file.getBrand());
+                }
+                case 1 -> {
+                    log.debug(LOG_GET_SUB_BRAND);
+                    file.setSubBrand(Utils.removeAccents(currentCell.getStringCellValue()));
+                    log.debug(file.getSubBrand());
+                }
+                case 2 -> {
+                    log.debug(LOG_GET_DESCRIPTION);
+                    file.setDescription(Utils.removeAccents(currentCell.getStringCellValue()));
+                    log.debug(file.getDescription());
+                }
+                case 3 -> {
+                    log.debug(LOG_DISCOUNT);
+                    file.setDiscount(currentCell.getNumericCellValue());
+                    log.debug(String.valueOf(file.getDiscount()));
+                }
+                case 4 -> {
+                    log.debug(LOG_GET_ENABLED);
+                    file.setEnabled(currentCell.getNumericCellValue() == 1);
+                    log.debug(String.valueOf(file.getEnabled()));
+                }
+                case 5 -> {
+                    log.debug(LOG_GET_PRODUCT_NEW);
+                    file.setProductNew(currentCell.getNumericCellValue() == 1);
+                    log.debug(String.valueOf(file.getProductNew()));
+                }
+                case 6 -> {
+                    log.debug(LOG_GET_PRICE);
+                    file.setPrice(currentCell.getNumericCellValue());
+                    log.debug(String.valueOf(file.getPrice()));
+                }
+                case 7 -> {
+                    log.debug(LOG_GET_PRODUCT_NAME);
+                    file.setProductName(Utils.removeAccents(currentCell.getStringCellValue()));
+                    log.debug(file.getProductName());
+                }
+                case 8 -> {
+                    log.debug(LOG_GET_STOCK);
+                    file.setStock((int) currentCell.getNumericCellValue());
+                    log.debug(String.valueOf(file.getStock()));
+                }
+                case 9 -> {
+                    log.debug(LOG_GET_TITLE);
+                    file.setTitle(Utils.removeAccents(currentCell.getStringCellValue()));
+                    log.debug(file.getTitle());
+                }
+                case 10 -> {
+                    log.debug(LOG_GET_TYPE);
+                    file.setType(Utils.removeAccents(currentCell.getStringCellValue()));
+                    log.debug(file.getType());
+                }
+                default -> {}
+            }
+            cellIdx++;
+        }
+        return file;
+    }
+
+    private Brand getBrandFromFile(final DtoInProductExcelFile file) {
+        if (file.getBrand() == null || file.getBrand().isEmpty()) {
+            return null;
+        }
+        final Brand brand = brandDao.findByBrandName(file.getBrand()).orElse(createBrand(file.getBrand()));
+        brand.setBrandName(file.getBrand());
+        return brandDao.save(brand);
+    }
+
+    private SubBrand getSubBrandFromFile(final DtoInProductExcelFile file) {
+        if (file.getSubBrand() == null || file.getSubBrand().isEmpty()) {
+            return null;
+        }
+        final SubBrand subBrand =
+                subBrandDao.findBySubBrandName(file.getSubBrand()).orElse(createSubBrand(file.getSubBrand()));
+        return subBrandDao.save(subBrand);
+    }
+
+    private ProductType getProductTypeFromFile(final DtoInProductExcelFile file) {
+        if (file == null || file.getType() == null || file.getType().isEmpty()) {
+            return null;
+        }
+        final ProductType productType = productTypeDao.findProductTypeByType(file.getType())
+                .orElse(createProductType(file.getType()));
+        return productTypeDao.save(productType);
+    }
+
+    private Product getProductFromFile(final DtoInProductExcelFile file, final String brandId, final String subBrandId,
+            final ProductType productType) {
+        if (file == null || file.getProductName() == null || file.getProductName().isEmpty()) {
+            return null;
+        }
+        final Product product = Product.builder()
+                .productNew(file.getProductNew())
+                .price(file.getPrice())
+                .discount(file.getDiscount())
+                .title(file.getTitle())
+                .description(file.getDescription())
+                .stock(file.getStock())
+                .productType(productType)
+                .brandId(brandId)
+                .subBrandId(subBrandId).build();
+        return productDao.save(product);
+    }
+
+    private Brand createBrand(final String brandName) {
+        final Brand brand = new Brand();
+        brand.setBrandName(brandName);
+        brand.setSubBrands(new ArrayList<>());
+        brand.setProducts(new ArrayList<>());
+        return brand;
+    }
+
+    private SubBrand createSubBrand(final String subBrandName) {
+        final SubBrand subBrand = new SubBrand();
+        subBrand.setSubBrandName(subBrandName);
+        subBrand.setProducts(new ArrayList<>());
+        return subBrand;
+    }
+
+    private ProductType createProductType(final String type) {
+        final ProductType productType = new ProductType();
+        productType.setType(type);
+        return productType;
+    }
+
+    public Path getPath(String filename) {
+        return Paths.get(Constants.UPLOADS_FOLDER).resolve(filename).toAbsolutePath();
     }
 
 }
